--- a/src/app-bar-top.css
+++ b/src/app-bar-top.css
@@ -1,13 +1,18 @@
 .ao-app-bar-top {
-  @apply h-56 w-full flex flex-row items-center px-4 ao-elevation-4;
+  @apply h-56 w-full flex flex-row items-center px-4 ao-elevation-4 select-none;
   background-color: var(--color-primary);
 
-  & > .ao-button + .title {
-    @apply pl-24;
+  & > .icon {
+    @apply p-12;
+    color: var(--color-in-primary);
+  }
+
+  & > .icon + .title {
+    @apply ml-24;
   }
 
   & > .title {
-    @apply flex-grow font-roboto text-xl;
+    @apply flex-grow ml-12 font-roboto text-xl;
     color: var(--color-in-primary);
   }
 
