--- a/src/tab.css
+++ b/src/tab.css
@@ -1,22 +1,22 @@
 .ao-tab {
   @apply w-full h-48 list-none select-none;
   @apply flex flex-row;
-  background: var(--color-primary);
+  background: color(primary);
 
   & > li {
     @apply inline-flex justify-center items-center;
     @apply flex-grow h-full relative cursor-pointer;
     @apply px-16 font-roboto text-base uppercase text-sm;
-    color: var(--color-in-primary-medium);
+    color: color(in-primary-medium);
     min-width: 90px;
 
     &:hover {
-      color: var(--color-in-primary);
+      color: color(in-primary);
     }
 
     &.selected {
-      color: var(--color-in-primary);
-      box-shadow: inset 0 -2px 0 var(--color-in-primary);
+      color: color(in-primary);
+      box-shadow: inset 0 -2px 0 color(in-primary);
     }
 
     &::after {
