--- a/src/text-field.css
+++ b/src/text-field.css
@@ -7,19 +7,19 @@
   & > input,
   & > label > span {
     @apply absolute px-12 font-roboto text-base pt-4;
-    color: var(--color-in-surface-medium);
+    color: color(in-surface-medium);
     transition: all 0.3s ease;
   }
 
   & > input {
     @apply w-full h-full pt-20 pb-4;
     @apply bg-gray-50 rounded-4 border-b border-solid;
-    border-bottom-color: var(--color-in-surface-low);
+    border-bottom-color: color(in-surface-low);
     border-bottom-left-radius: 0%;
     border-bottom-right-radius: 0%;
 
     &:hover:enabled {
-      border-bottom-color: var(--color-in-surface);
+      border-bottom-color: color(in-surface);
 
       & + label::after {
         @apply ao-overlay-hover;
@@ -27,9 +27,9 @@
     }
 
     &:focus:enabled {
-      border-bottom-color: var(--color-primary);
-      box-shadow: 0 1px 0 0 var(--color-primary);
-      color: var(--color-in-surface);
+      border-bottom-color: color(primary);
+      box-shadow: 0 1px 0 0 color(primary);
+      color: color(in-surface);
 
       & + label::after {
         @apply ao-overlay-focus;
@@ -43,7 +43,7 @@
     }
 
     &:focus + label > span {
-      color: var(--color-primary);
+      color: color(primary);
     }
 
     &:invalid:not(:focus) {
@@ -51,7 +51,7 @@
     }
 
     &:disabled {
-      color: var(--color-in-surface-low);
+      color: color(in-surface-low);
 
       & + label::after {
         @apply bg-transparent;
