--- a/src/widget/button.css
+++ b/src/widget/button.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap');
-@import './theme.css';
-
 .ao-button {
   @apply outline-none;
 
@@ -41,7 +38,7 @@
   &&-outlined {
     @apply px-16;
 
-    & > .ao-icons {
+    & > .ao-icon {
       margin-left: -0.25rem;
     }
   }
@@ -104,11 +101,11 @@
     }
   }
 
-  & > .ao-icons {
+  & > .ao-icon {
     @apply text-lg;
   }
 
-  & > .ao-icons + span {
+  & > .ao-icon + span {
     @apply ml-8;
   }
 
@@ -125,7 +122,7 @@
       @apply ao-overlay-in-surface rounded-full;
     }
 
-    & > .ao-icons {
+    & > .ao-icon {
       @apply text-2xl;
     }
 
