optimize check and radio

--- a/src/widget/index.css
+++ b/src/widget/index.css
@@ -1,6 +1,5 @@
 @import './app-bar-top.css';
 @import './button.css';
-@import './check.css';
-@import './radio.css';
+@import './selection';
 @import './tab.css';
 @import './text-field.css';
