--- a/src/css/base/layout.css
+++ b/src/css/base/layout.css
@@ -7,3 +7,58 @@
     @apply p-24;
   }
 }
+
+.ao-grid {
+  @apply flex flex-row flex-wrap;
+  margin-left: -0.25rem;
+  margin-right: -0.25rem;
+
+  & > div {
+    @apply px-4;
+  }
+
+  @for $i from 1 to 3 {
+    & .col-#{$i} {
+      @apply w-#{$i}/4;
+    }
+  }
+
+  & .col-4,
+  & .col-5,
+  & .col-6,
+  & .col-7,
+  & .col-8,
+  & .col-9,
+  & .col-10,
+  & .col-11,
+  & .col-12 {
+    @apply w-full;
+  }
+
+  @screen sm {
+    @for $j from 1 to 7 {
+      & .col-#{$j} {
+        @apply w-#{$j}/8;
+      }
+    }
+
+    & .col-8,
+    & .col-9,
+    & .col-10,
+    & .col-11,
+    & .col-12 {
+      @apply w-full;
+    }
+  }
+
+  @screen md {
+    @for $j from 1 to 11 {
+      & .col-#{$j} {
+        @apply w-#{$j}/12;
+      }
+    }
+    & .col-12 {
+      @apply w-full;
+    }
+  }
+}
