--- a/src/css/widget/selection/radio.css
+++ b/src/css/widget/selection/radio.css
@@ -3,7 +3,7 @@
     @apply bg-transparent rounded-full;
     border-color: color(in-surface-medium);
     background-clip: content-box;
-    padding: 3px;
+    padding: toRem(3);
 
     &:disabled {
       border-color: color(in-surface-low) !important;
