--- a/src/css/widget/card.css
+++ b/src/css/widget/card.css
@@ -1,10 +1,10 @@
 .ao-card {
-  @apply rounded-4 ao-elevation-1;
+  @apply flex flex-col rounded-4 ao-elevation-1;
   background-color: color(surface);
   color: color(in-surface);
 
   & > .contents {
-    @apply px-16 pt-16 pb-8 relative cursor-pointer select-none;
+    @apply px-16 pt-16 pb-16 flex-grow relative cursor-pointer select-none;
 
     &::after {
       @apply ao-overlay ao-overlay-in-surface left-0 top-0 w-full h-full;
